--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-ENV=DEV
-CLUSTERNODE=4
+CLUSTER_ENABLE=true
+API_DEFAULT_PREFIX=/api/v1
+SWAGGER_TITLE=CLUSTER API
+SWAGGER_DESCRIPTION=API NestJS Cluster
+SWAGGER_PREFIX=/api/api-docs
+SWAGGER_ENABLE=true
+PORT=3000
