--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ SWAGGER_DESCRIPTION=API NestJS Cluster
 SWAGGER_PREFIX=/api/api-docs
 SWAGGER_ENABLE=true
 PORT=3000
+JWT_SECRET=DO NOT USE THIS VALUE. INSTEAD, CREATE A COMPLEX SECRET AND KEEP IT SAFE OUTSIDE OF THE SOURCE CODE
+JWT_EXPIRED_SEC=3600
