--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CLUSTER_ENABLE=true
+CLUSTER_ENABLE=false
 API_DEFAULT_PREFIX=/api/v1
 SWAGGER_TITLE=CLUSTER API
 SWAGGER_DESCRIPTION=API NestJS Cluster
